Fix navbar spacing on handheld devices.

--- a/public/sass/grayscale.scss
+++ b/public/sass/grayscale.scss
@@ -61,6 +61,10 @@ a {
     font-weight: 400;
 }
 
+.navbar-header {
+    margin-bottom: 10px;
+}
+
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
